--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -1,11 +1,9 @@
-/* hamburger menu */
 .menu-wrap {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 1;
 }
-
 .menu-wrap .toggler {
     position: absolute;
     top: 0;
@@ -15,11 +13,8 @@
     width: 50px;
     height: 50px;
     opacity: 0;
-
 }
-
 .menu-wrap .hamburger {
-
     position: absolute;
     top: 0;
     left: 0;
@@ -27,13 +22,12 @@
     width: 60px;
     height: 60px;
     padding: 1rem;
-    background: #1d2b3a;
+    /* background: #1d2b3a; */
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
-/* gamburger line*/
+/* Gamburgeriin shugam */
 .menu-wrap .hamburger > div {
     position: relative;
     flex: none;
@@ -46,11 +40,9 @@
     transition: all 0.4s ease;
 }
 
-/* gamburger's deed dood line */
-
+/* Gamburgeriin deed bolo dood shugam */
 .menu-wrap .hamburger > div:before,
 .menu-wrap .hamburger > div:after {
-
     content: '';
     position: absolute;
     z-index: 1;
@@ -59,20 +51,87 @@
     height: 2px;
     background: inherit;
 }
-
-.menu-wrap .hamburger > div:after {
+.menu-wrap .hamburger > div:after{
     top: 10px;
 }
 
 /* Toggler animation */
-
 .menu-wrap .toggler:checked + .hamburger > div {
     transform: rotate(135deg);
 }
 
-.menu-wrap .toggler:checked + .hamburger > div:before,
+.menu-wrap .toggler:checked + .hamburger > div::before,
 .menu-wrap .toggler:checked + .hamburger > div::after {
-
     top: 0;
     transform: rotate(90deg);
 }
+/* Tses daragdsan blon mouse ochih uyd ergvvleh */
+.menu-wrap .toggler:checked:hover + .hamburger > div {
+    transform: rotate(225deg);
+}
+/* Overlay tsesiig haruulah */
+
+.menu-wrap .toggler:checked ~ .menu {
+    visibility: visible;
+    height: 100%;
+    width: 100%;
+}
+.menu-wrap .toggler:checked ~ .menu >div {
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+}
+
+.menu-wrap .toggler:checked ~ .menu > div > div {
+    opacity: 1;
+    transition: opacity 0.4s ease-in-out 0.4s;
+}
+
+.menu-wrap .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    /* visibility: hidden; */
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+
+}
+.menu-wrap .menu > div {
+    background: var(--overlay-color);
+    border-radius: 50%;
+    width: 300vw;
+    height: 300vw;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+}
+.menu-wrap .menu > div > div {
+    text-align: center;
+    max-width: 90vw;
+    max-height: 100vh;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+}
+.menu-wrap .menu > div > div> ul >li {
+    list-style: none;
+    color: #fff;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+.menu-wrap .menu > div > div> ul >li > a {
+    color: inherit;
+    text-decoration: none;
+    transition-timing-function: color 0.2s ease;
+}
+.menu-wrap .menu > div > div> ul >li > a:hover {
+    color: var(--secondary-color);
+}
+
+
