--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@
     --light-color: #f3f3f3;
     --dark-color:#333;
     --secondary-color:#f99500;
+    --overlay-color:rgba(24, 39, 52, 0.85);
     --light-seacolor: #00dfc4;
     --light-naturecolor: rgb(0, 252, 113);
     --light-yellowcolor: rgb(255, 251, 0);
     --max-width: 1100px ;
+    --menu-speed: 0.75s;
 }
 * {
     margin: 0;
@@ -32,11 +34,13 @@ h1,h2,h3,h4,h5,h6 {
     margin-bottom: 0.55rem;
     line-height: 1.3;
 }
-.container {
-    max-width: var(--max-width);
-    margin: auto;
-    padding: 0 1rem;
-    overflow: hidden;
+.footer {
+    display: flex;
+    background: var(--dark-color);
+    color: var(--light-color);
+    justify-content:space-around;
+    height: 100px;
+    align-items: center;
 }
 
 
@@ -48,19 +52,25 @@ h1,h2,h3,h4,h5,h6 {
     background: #1d2b3a;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 3;
 }
 
 #main-nav .container {
     display: grid;
-    grid-template-columns: 6fr 2fr;
+    grid-template-columns:6fr 2fr;
+    padding: 1rem;
     align-items: center;
 }
 
+#main-nav .container .menu-wrap {
+    padding-bottom: 10px ;
+    padding-left: -100px;
+}
 .logo a {
-    font-size: 3rem;
-    justify-self: start;
+    font-size: 2rem;
     color: rgb(0, 252, 113);
+    justify-self: flex-start;
+    
 }
 
 #main-nav ul {
@@ -109,6 +119,7 @@ h1,h2,h3,h4,h5,h6 {
     background: #050505;
     padding: 2rem;
     position: relative;
+    z-index: 0;
 }
 
 .category {
@@ -143,6 +154,7 @@ h1,h2,h3,h4,h5,h6 {
     width: 100% ;
     height: 100%;
     opacity: 0.4;
+
 }
 
 #showcase .showcase-container {
@@ -150,6 +162,7 @@ h1,h2,h3,h4,h5,h6 {
     grid-template-columns: 2fr 1fr;
     align-items: center;
     height: 50vh;
+
 }
 
 #showcase .showcase-content { z-index: 1;}
@@ -160,9 +173,17 @@ h1,h2,h3,h4,h5,h6 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1rem;
-
 }
 
+@media (max-width:1000px) {
+    #home-articles .article-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 1rem;
+    }
+}
+
+a
 .card {
     background-color: #fff;
     padding: 1rem;
