--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ a
     margin: auto;
     padding: 0 1rem;
     overflow: hidden;
+    
 
 }
 
@@ -196,52 +197,29 @@ a
 }
 
 /* Bulgan details */
-.container .details {
-    background: #fff;
-    height: 100vh;
+.ai-container .ai-details { 
+    background-color: #f2ecec;
+    /* height: 100vh; */
     margin: auto;
-    margin-top: 3rem;
-}
-
-.details {
-    background-color: #fff;
+    margin-top: 3rem;   
     padding: 1rem;
 }
-
-.container .city-grid {
-   
-        max-width: var(--max-width);
-        margin: auto;
-        padding: 0 1rem;
+.ai-container .ai-city-text {
+    
+    max-width: var(--max-width); 
+    margin: auto; 
+    padding: 0 1rem;
+    
 } 
-.city-grid p {
+
+.ai-city-text p {
     text-align: justify;
-}
+}  
 
- .container  {
-    height: 100%;
-} 
 
-/* details */
-.details-article-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1rem;
-        max-width: var(--max-width);
-        margin: auto;
-        padding: 0 1rem;
-        overflow: hidden;
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        
-        
 
-}
 
-.details-article-container img { 
-    height: 250px;
-    width: 500px;
-}
+
 /* 
 contact */
 #d-showcase {
